--- a/codecov.yml
+++ b/codecov.yml
@@ -1,6 +1,23 @@
+flag_management:
+  default_rules:
+    carryforward: true
+    statuses:
+      - type: project
+        target: auto
+        threshold: 1%
+      - type: patch
+        target: 90%
+  individual_flags:
+    - name: dars
+      paths:
+        - packages/dars/lib/**
+    - name: dars_test
+      paths:
+        - packages/dars_test/lib/**
+
 comment:
-  layout: " diff, flags, files"
-  behavior: default
+  layout: "diff, flags, files"
+  behavior: once
   require_changes: false
   require_base: false
   require_head: true
