--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,5 @@
 name: dars_workspace
+version: 0.2.0
 publish_to: none
 
 environment:
@@ -6,7 +7,10 @@ environment:
 
 workspace:
   - packages/dars
+  - packages/dars_test
 
 dev_dependencies:
+  args: ^2.7.0
   coverage: ^1.15.0
   test: ^1.25.6
+  yaml: ^3.1.3
